[package]
name = "s3-surfer"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-channel = "2.1.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1.4", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.4.0"
bytes = "1"
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.0"
filetime = "0.2.14"
futures = "0.3.29"
indicatif = { version = "0.17.7", features = ["tokio"] }
log = "0.4.20"
partial_application = "0.2.1"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3.0"
thiserror = "1"
csv = "1.3.0"
