[package]
name = "sulfite-tools"
version = "0.0.1"
edition = "2021"

[dependencies]
sulfite = { path = "../sulfite" }

anyhow = "1.0"
env_logger = "0.11.0"
colored = "2.1.0"
clap = { version = "4.4.10", features = ["derive"] }
csv = "1.3.0"
futures = "0.3.29"
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
