[package]
name = "sulfite"
version = "0.0.7"
edition = "2021"
authors = ["Terence Liu <terence.liu@clearview.ai>"]
description = "A high-level S3 client built on AWS SDK for Rust for bandwidth saturation"
license = "MIT"
homepage = "https://github.com/clearviewai/sulfite"
repository = "https://github.com/clearviewai/sulfite"
readme = "README.md"
keywords = ["s3", "object", "storage"]
categories = ["web-programming::http-client"]

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.30"
bytes = "1"
filetime = "0.2"
log = "0.4"
partial_application = "0.2"
rand = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
thiserror = "2"
urlencoding = "2.1"
